--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,6 +12,8 @@ color: #545454;
     .footer {
         font-size: 14px;
         line-height: 17px;
+        margin-left: 19px;
+        margin-right: 19px;
     }
 }
   
