--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,9 +2,21 @@
     margin-left: 36px;
     margin-top: 34px;
     margin-bottom: 54px;
-    width: 330px;
+    max-width: 330px;
     height: 23px;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
 }
+
+@media screen and (max-width: 425px) {
+    .popup__title {
+        margin-left: calc(36px * 0.65);
+        margin-right: calc(34px * 0.65);
+        margin-bottom: calc(54px * 0.65);
+        width: calc(330px * 0.65);
+        font-size: calc(24px * 0.65);
+        line-height: calc(29px * 0.65);
+              
+            }
+        }
