--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,15 @@
 .header{
     border-bottom: 1px solid #545454;
-    opacity: 0.7;
     max-width: 882px;
-    min-height: 74px;
     margin-bottom: 40px;
 
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 583px) {
     .header {
-        margin-bottom: 42px
+        margin-bottom: 42px;
+        max-width: 282px;
+        min-height: 24.4px;
+        margin-left: 27px;
     }
 }
