--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,7 +1,8 @@
 .popup__container{
-    width: 430px;
-    height: 330px;
+    max-width: 430px;
+    width: 100%;
     background: #FFFFFF;
+    opacity: 1;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     display: flex;
@@ -11,5 +12,15 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+   
+    
 }
+@media screen and (max-width: 425px) {
+    .popup__container {
+        max-width: calc(430px * 0.65);
+    
+    }
+}
+
+
 
