--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,10 +6,6 @@
     top: 0px;
     width: 100%;
     height: 100vh;
+    background-color: rgba(0, 0, 0, .5);
     display: none;
-    
-
 }
-
-
-    
