--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -13,7 +13,7 @@
 
 .profile__add-button:hover{
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0.6;
 }
 
 
@@ -21,5 +21,6 @@
     .profile__add-button{
       width: 282px;
       margin-bottom: 36px;
+      background-size: 16px 16px;
     } 
   }
