--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,8 @@
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__container/page__container.css);
-@import url(../blocks/content__section/content__section.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/content/__section/content__section.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/header__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
@@ -25,14 +26,13 @@
 @import url(../blocks/footer/footer__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
-@import url(../blocks/popup/__blackout/popup__blackout.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__input-container/popup__input-container.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__input-items/popup__input-items.css);
 @import url(../blocks/popup/__item/popup__item.css);
-@import url(../blocks/popup/__name-input/popup__name-input.css);
-@import url(../blocks/popup/__job-input/popup__job-input.css);
+@import url(../blocks/popup/__item/_name/popup__item_name.css);
+@import url(../blocks/popup/__item/_job/popup__item_job.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__close-icon/popup__close-icon.css);
 
