--- a/blocks/elements/__title/elements__title.css
+++ b/blocks/elements/__title/elements__title.css
@@ -1,6 +1,7 @@
 .elements__title{
     font-size: 24px;
     line-height: 29px;
+    max-width: 224px;
     color: #000000;
     margin: 0;
     text-overflow: ellipsis;
